move packing part to root