@@ -32,8 +32,6 @@ compileTestJava {
 
 dependencies {
     implementation project(':core')
-
-//    implementation 'org.slf4j:slf4j-api:1.7.30'
     implementation 'com.intellij:annotations:12.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
@@ -105,85 +103,5 @@ jar {
         exclude 'META-INF/*.RSA'
     }
 }
-def appName = "Samurai"
-task packageMacApp(type: Exec) {
-    workingDir './'
 
-    commandLine('jpackage',
-            '--verbose',
-            '--add-modules', 'java.base,java.desktop,java.naming,jdk.internal.jvmstat,jdk.attach',
-            '--main-class', "$mainClassName",
-            '--main-jar', "${buildDir}/libs/${project.name}-${project.version}.jar",
-            '--jlink-options', '--strip-native-commands',
-            '--java-options',
-            """-Xmx128m -Xms128m -XX:+UseSerialGC -Dsun.java2d.metal=true
-               --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
-               --add-exports=jdk.attach/sun.tools.attach=ALL-UNNAMED
-               -XX:ErrorFile=\$USER_HOME/java_error_in_idea_%p.log
-               -XX:HeapDumpPath=\$USER_HOME/java_error_in_idea.hprof""",
-            '--name', appName,
-            '--app-version', "${project.version}",
-            '--copyright', 'Yusuke Yamamoto',
-            '--vendor', 'Yusuke Yamamoto',
-            '--icon', 'package/samurai.icns',
-            '--input', "${buildDir}/",
-            '--dest', './',
-            '--mac-package-identifier', 'samurai.swing.Samurai',
-            '--mac-signing-key-user-name', 'Yusuke Yamamoto (TX2Q55XRF7)',
-            '--mac-sign',
-            '--mac-entitlements', "${workingDir}/package/entitlement.plist",
-    )
-}
 
-tasks.packageMacApp.dependsOn([':gui:jar'])
-
-task notarizeMacApp(type: Exec) {
-    workingDir './'
-
-    commandLine('xcrun',
-            'altool', '--notarize-app', '--primary-bundle-id'
-            , 'one.cafebabe.Samurai', '-u', project.properties['APPLE_DEVELOPER_USER'] ?: "none", '-p', project.properties['APPLE_DEVELOPER_APP_PASSWORD'] ?: "none", '-f', "${appName}-${project.version}.dmg"
-    )
-}
-
-task checkMacAppNotarized(type: Exec) {
-    workingDir './'
-    commandLine('spctl', '--assess', '-vvvv', '--ignore-cache', '--no-cache', "/Applications/${appName}.app")
-}
-
-task stapleMacApp(type: Exec) {
-    workingDir './'
-
-    commandLine('xcrun',
-            'stapler', 'staple', "${appName}-${project.version}.dmg"
-    )
-}
-
-clean {
-    delete += 'Samurai'
-}
-
-task packageWinApp(type: Exec) {
-    workingDir './'
-    commandLine('jpackage',
-            '--verbose',
-            '--add-modules', 'java.base,java.desktop,java.naming,jdk.internal.jvmstat,jdk.attach',
-            '--main-class', "$mainClassName",
-            '--main-jar', "${buildDir}/libs/${project.name}-${project.version}.jar",
-            '--jlink-options', '--strip-native-commands',
-            '--java-options',
-            """-Xmx128m -Xms128m -XX:+UseSerialGC
-               --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
-               --add-exports=jdk.attach/sun.tools.attach=ALL-UNNAMED
-               -XX:ErrorFile=\$USER_HOME/java_error_in_idea_%p.log
-               -XX:HeapDumpPath=\$USER_HOME/java_error_in_idea.hprof""",
-            '--name', appName,
-            '--app-version', "${project.version}",
-            '--copyright', 'Yusuke Yamamoto',
-            '--vendor', 'Yusuke Yamamoto',
-            '--type', 'app-image',
-            '--icon', 'package/samurai.ico',
-            '--input', "${buildDir}/",
-            '--dest', './',
-    )
-}
